--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -162,7 +162,7 @@ i {
 }
 //navigation wrapper
 .navigation-wrapper {
-  background-color: #cbea19;
+  background-color: #43b524;
   display: flex;
   align-items: center;
   padding: 5px 10px;
